feat(tags): change count
